[package]
name = "ignite-takehome-supplier-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = {version = "0.4.42", features = ["serde"]}
hyper = "1.8.1"
